--- a/.gitmodules
+++ b/.gitmodules
@@ -31,3 +31,6 @@
 [submodule "vim-pathogen"]
 	path = vim-pathogen
 	url = https://github.com/tpope/vim-pathogen.git
+[submodule "bundle/camelCaseMotion"]
+	path = bundle/camelCaseMotion
+	url = https://github.com/bkad/CamelCaseMotion.git
