--- a/.gitmodules
+++ b/.gitmodules
@@ -1,39 +1,45 @@
-[submodule "bundle/ctrlp.vim"]
-	path = bundle/ctrlp.vim
+[submodule "bundle/ctrlp"]
+	path = bundle/ctrlp
 	url = https://github.com/kien/ctrlp.vim.git
-[submodule "bundle/vim-twig"]
-	path = bundle/vim-twig
+[submodule "vim-twig"]
+	path = vim-twig
 	url = https://github.com/beyondwords/vim-twig.git
-[submodule "bundle/solarized"]
-	path = bundle/solarized
+[submodule "bundle/vim-colors-solarized"]
+	path = bundle/vim-colors-solarized
 	url = git://github.com/altercation/vim-colors-solarized.git
-[submodule "bundle/fugitive"]
-	path = bundle/fugitive
-	url = git://github.com/tpope/vim-fugitive.git
-[submodule "bundle/phpDocumentor"]
-	path = bundle/phpDocumentor
-	url = https://github.com/vim-scripts/PDV--phpDocumentor-for-Vim.git
-[submodule "bundle/tern"]
-	path = bundle/tern
-	url = https://github.com/marijnh/tern_for_vim.git
-[submodule "bundle/vim-javascript"]
-	path = bundle/vim-javascript
-	url = https://github.com/pangloss/vim-javascript.git
-[submodule "bundle/vim-javascript-syntax"]
-	path = bundle/vim-javascript-syntax
-	url = https://github.com/jelera/vim-javascript-syntax.git
-[submodule "bundle/nerdcommenter"]
-	path = bundle/nerdcommenter
-	url = https://github.com/scrooloose/nerdcommenter.git
-[submodule "vim-pathogen"]
-	path = vim-pathogen
+[submodule "bundle/pathogen.git"]
+	path = bundle/pathogen.git
 	url = https://github.com/tpope/vim-pathogen.git
-[submodule "bundle/camelCaseMotion"]
-	path = bundle/camelCaseMotion
-	url = https://github.com/bkad/CamelCaseMotion.git
-[submodule "bundle/ack"]
-	path = bundle/ack
+[submodule "bundle/ack-vim"]
+	path = bundle/ack-vim
 	url = https://github.com/mileszs/ack.vim.git
-[submodule "bundle/emmet"]
-	path = bundle/emmet
+[submodule "bundle/vin-twig"]
+	path = bundle/vin-twig
+	url = git@github.com:evidens/vim-twig.git
+[submodule "bundle/vim-emmet"]
+	path = bundle/vim-emmet
 	url = https://github.com/mattn/emmet-vim.git
+[submodule "bundle/vinegar"]
+	path = bundle/vinegar
+	url = git://github.com/tpope/vim-vinegar.git
+[submodule "bundle/dracula-theme"]
+	path = bundle/dracula-theme
+	url = git@github.com:zenorocha/dracula-theme.git
+[submodule "/Users/kevinnedelec/.vim/bundle/vim-airline"]
+	path = /Users/kevinnedelec/.vim/bundle/vim-airline
+	url = https://github.com/bling/vim-airline
+[submodule "/Users/kevinnedelec/.vim/bundle/vim-fugitive"]
+	path = /Users/kevinnedelec/.vim/bundle/vim-fugitive
+	url = git://github.com/tpope/vim-fugitive.git
+[submodule "/Users/kevinnedelec/.vim/bundle/vim-bufferline"]
+	path = /Users/kevinnedelec/.vim/bundle/vim-bufferline
+	url = https://github.com/bling/vim-bufferline
+[submodule "/Users/kevinnedelec/.vim/bundle/gundo"]
+	path = /Users/kevinnedelec/.vim/bundle/gundo
+	url = http://github.com/sjl/gundo.vim.git
+[submodule "/Users/kevinnedelec/.vim/bundle/vim-signify"]
+	path = /Users/kevinnedelec/.vim/bundle/vim-signify
+	url = https://github.com/mhinz/vim-signify
+[submodule "bundle/vim-gitgutter"]
+	path = bundle/vim-gitgutter
+	url = git://github.com/airblade/vim-gitgutter.git
