--- a/.gitmodules
+++ b/.gitmodules
@@ -76,3 +76,6 @@
 [submodule "bundle/tsuquyomi"]
 	path = bundle/tsuquyomi
 	url = git@github.com:Quramy/tsuquyomi.git
+[submodule "bundle/vim-autoformat"]
+	path = bundle/vim-autoformat
+	url = git@github.com:Chiel92/vim-autoformat.git
