--- a/.editorconfig
+++ b/.editorconfig
@@ -1,16 +1,21 @@
-[**.js]
+root=true
+
+[*]
+insert_final_newline = true
 indent_style = space
 indent_size = 2
 
-[**.json]
+[*.js]
+insert_final_newline = true
 indent_style = space
 indent_size = 2
 
-[**.jsx]
-e4x = true
+[*.html]
+insert_final_newline = true
 indent_style = space
 indent_size = 2
 
-[**.css]
+[*.css]
+insert_final_newline = true
 indent_style = space
 indent_size = 2
